put it in the ensure request

--- a/crates/propolis-api-types/Cargo.toml
+++ b/crates/propolis-api-types/Cargo.toml
@@ -9,6 +9,7 @@ doctest = false
 
 [dependencies]
 crucible-client-types.workspace = true
+oxide_virtual_platforms.workspace = true
 propolis_types.workspace = true
 schemars.workspace = true
 serde.workspace = true
