--- a/lib/propolis-client/Cargo.toml
+++ b/lib/propolis-client/Cargo.toml
@@ -10,6 +10,7 @@ doctest = false
 async-trait.workspace = true
 base64.workspace = true
 futures.workspace = true
+oxide_virtual_platforms.workspace = true
 progenitor.workspace = true
 rand.workspace = true
 reqwest = { workspace = true, features = ["json", "rustls-tls"] }
